--- a/xiaomi/css/common.css
+++ b/xiaomi/css/common.css
@@ -1,3 +1,4 @@
+/* 样式重置  浏览器默认会有一些我们不想要的样式 */
 body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,fieldset,legend,button,input,textarea,th,td{margin:0;padding:0;}
 body,button,input,select,textarea{font: 14px/1.5 Helvetica Neue,Helvetica,Arial,Microsoft Yahei,Hiragino Sans GB,Heiti SC,WenQuanYi Micro Hei,sans-serif;}
 h1,h2,h3,h4,h5,h6{font-size:100%;}
