--- a/xiaomi/css/index.css
+++ b/xiaomi/css/index.css
@@ -1,12 +1,4 @@
-.banner{
-    height: 120px;
-    /* background: red; */
-    background-image: url(../images/banner.jpg);
-    /* 背景图片定位 水平0（固定值 left center right）  垂直0(固定值 top center bottom ) */
-    background-position: center 0;
-    /* 背景图片大小  宽度自适应 高度120*/
-    background-size:auto 120px ;
-}
+
 /* nav开始 */
 .nav{
     height: 40px;
@@ -16,6 +8,7 @@
     width: 1226px;
     height: 40px;
     /* background: #f00; */
+    /* 有宽度的块级元素 水平居中 */
     margin: 0 auto;
 }
 .nav-left{
@@ -43,3 +36,11 @@
     font-size: 12px;
     padding: 0 7px;
 } */
+/* 购物车 */
+.nav-right .cart{
+    background: #424242;
+    width: 120px;
+    color: #b0b0b0;
+    text-align: center;
+    font-size: 12px;
+}
