--- a/xiaomi/css/common.css
+++ b/xiaomi/css/common.css
@@ -14,3 +14,7 @@ legend{color:#000;}
 fieldset,img{border:0;}
 button,input,select,textarea{font-size:100%;}
 table{border-collapse:collapse;border-spacing:0;}
+.center-box{
+    width: 1226px;
+    margin:0 auto;
+}
