--- a/xiaomi/css/index.css
+++ b/xiaomi/css/index.css
@@ -81,7 +81,7 @@
 /* header */
 .header-box{
 height: 100px;
-background: #FF0;
+/* background: #FF0; */
 }
 /* 
     文本 行元素 行级块元素 水平居中->父元素设置text-align:center
@@ -114,4 +114,34 @@ background: #FF0;
 }
 .search-box{
     float: right;
+    width: 296px;
+    height: 50px;
+    border:1px solid #e0e0e0;
+    margin-top:25px;
+}
+.search-box input{
+    width: 245px;
+    border:none;
+    height: 50px;
+    outline: none;
+    float: left;
+    color: #333;
+    padding:0 10px;
+    box-sizing: border-box;
+}
+.search-btn{
+    width:50px;
+    display: inline-block;
+    height: 50px;
+    /* background: #f00; */
+    float: right;
+    border-left:1px solid #e0e0e0;
+    text-align: center;
+    line-height: 50px;
+    color:#616161;
+}
+.search-btn:hover{
+    background: #ff6700;
+    border-left:1px solid #ff6700;
+    color:#fff;
 }
