--- a/xiaomi/css/index.css
+++ b/xiaomi/css/index.css
@@ -114,13 +114,14 @@ height: 100px;
 }
 .search-box{
     float: right;
-    width: 296px;
+    width: 298px;
     height: 50px;
-    border:1px solid #e0e0e0;
+    /* border:1px solid #e0e0e0; */
     margin-top:25px;
 }
+/* 298 = 245   +53 */
 .search-box input{
-    width: 245px;
+    width: 246px;
     border:none;
     height: 50px;
     outline: none;
@@ -128,20 +129,23 @@ height: 100px;
     color: #333;
     padding:0 10px;
     box-sizing: border-box;
+    border:1px solid #e0e0e0;
+    border-right: none;
 }
 .search-btn{
-    width:50px;
-    display: inline-block;
+    width:52px;
+    /* display: inline-block; */
     height: 50px;
     /* background: #f00; */
     float: right;
-    border-left:1px solid #e0e0e0;
+    border:1px solid #e0e0e0;
     text-align: center;
     line-height: 50px;
     color:#616161;
+    box-sizing: border-box;
 }
 .search-btn:hover{
     background: #ff6700;
-    border-left:1px solid #ff6700;
+    border:1px solid #ff6700;
     color:#fff;
 }
