--- a/xiaomi/css/index.css
+++ b/xiaomi/css/index.css
@@ -221,6 +221,8 @@ height: 100px;
 /*  */
 .channel-box{
     margin-top:15px;
+    overflow: hidden;
+    margin-bottom: 25px;
 }
 .channel-left{
     background: #5f5750;
@@ -286,4 +288,35 @@ height: 100px;
 }
 .channel-right img{
     width:100%;
+}
+/* 闪购开始 */
+.main-content{
+    background: #f5f5f5;
+}
+
+.flashsale-header{
+    height: 58px;
+    line-height: 58px;
+    color: #333;
+    font-weight: 200;
+    font-size: 22px;
+    -webkit-font-smoothing: antialiased;
+}
+.btn-box{
+    position: absolute;
+    right:0;
+    top:20px;
+}
+.sale-header-box{
+    position: relative;
+}
+.btn-box span{
+    width: 36px;
+    height: 24px;
+    line-height: 24px;
+    border:1px solid  #e0e0e0;
+    display: inline-block;
+    text-align: center;
+    color:#b0b0b0;
+    font-size: 12px;
 }
