--- a/xiaomi/css/common.css
+++ b/xiaomi/css/common.css
@@ -19,3 +19,8 @@ table{border-collapse:collapse;border-spacing:0;}
     width: 1226px;
     margin:0 auto;
 }
+.clearfix::after{
+    content:"";
+    display: block;
+    clear: both;
+}
