--- a/xiaomi/css/index.css
+++ b/xiaomi/css/index.css
@@ -461,6 +461,21 @@ height: 100px;
 .mobile-content-right{
     width: 992px;
     float: right;
-    background: #f00;
-    height: 600px;
+    /* background: #f00; */
+    /* height: 600px; */
+    height: 614px;
+}
+.mobile-list{
+    width: 234px;
+    height: 300px;
+    background: #fff;
+    float: left;
+    margin-left:14px;
+    margin-bottom: 14px;
+}
+.mobile-list:hover{
+    box-shadow: 0 15px 30px rgba(0,0,0,.1);
+    position: relative;
+    top:-2px;
+    /* margin-top:-2px; */
 }
