--- a/xiaomi/css/index.css
+++ b/xiaomi/css/index.css
@@ -479,3 +479,33 @@ height: 100px;
     top:-2px;
     /* margin-top:-2px; */
 }
+.mobile-list .prod-img{
+    width: 160px;
+    height: 160px;
+    margin-top:20px;
+    margin-bottom: 18px;
+
+}
+.mobile-list{
+    text-align: center;
+}
+.mobile-list .prod-title{
+    font-size: 14px;
+    font-weight: 400;
+    color: #333;
+    padding:0 20px;
+    height:21px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    
+}
+.mobile-list .prod-desc{
+    font-size: 12px;
+    color: #b0b0b0;
+    margin:2px auto 10px ;
+}
+.mobile-list .prod-price{
+    color: #ff6700;
+    font-size:14px;
+}
