--- a/移动端/仿美团/css/index.css
+++ b/移动端/仿美团/css/index.css
@@ -14,11 +14,70 @@
 .header .city{
     width:180px;
     height:101px;
+    text-align: center;
+    line-height: 101px;
 }
 .header .mine{
     width:94px;
     height:101px;
+    text-align: center;
+    line-height: 101px;
+}
+.mine .icon-wode{
+    /* 相对于根元素的字体大小 */
+    font-size: 0.28rem;
 }
 .header .search-box{
     flex:1;
+    border-radius:0.18rem;
+    opacity: 0.9;
+    background: #FFFFFF;
+    height:0.64rem;
+    margin-top:.2rem;
+    line-height: 0.64rem;
+    color:#999999;
+    padding: 0 0.13rem 0 0.27rem;
+    /* 当行文本溢出隐藏 */
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.search-box img{
+    vertical-align: middle;
+}
+.search-box span{
+    vertical-align: middle;
+}
+.banner{
+    display: flex;
+    height: 1.04rem;
+    background: #000;
+}
+.banner .logo{
+    width: 72px;
+    height: 72px;
+    margin:0.16rem 0.2rem 0 0.3rem;
+}
+.banner .btn{
+    width:110px;
+    height:60px;
+    background: #FFBD00;
+    border-radius: 0.14rem;
+    text-align: center;
+    line-height: 60px;
+    color:#000;
+    margin:0.22rem 0.29rem 0 0;
+}
+.banner .text-box{
+    flex:1;
+}
+.text-box p:nth-child(1){
+    font-size: 0.26rem;
+    color: #fff;
+    padding-top:0.17rem;
+}
+.text-box p:nth-child(2){
+    font-size: 0.22rem;
+    font-weight: 300;
+    color:#fff;
 }
