--- a/sass/1_test.scss
+++ b/sass/1_test.scss
@@ -6,6 +6,9 @@ $icon:success;
 // sass 
 /* sass1 */ 
 
+@function add($a,$b){
+    @return $a+$b;
+}
 body{
     background: $color;
     .div1{
@@ -18,7 +21,7 @@ body{
         }
     }
     p{
-        width: 200px;
+        width: add(100px,200px);
         #{$h}: 200px;
         background: url(#{$icon}.jpg);
     }
@@ -36,9 +39,33 @@ body{
     }
     .div2{
         @extend .aa;
-        background: #000;
+        background: lighten(#f00,20%);
+        width:floor(234.56px);
+        height:200px;
+        @if 1 + 1 == 2 { border: 1px solid #000; }
+
     }
-  
+    // @for $i from 1 through 3 {
+    //     .item-#{$i} { width: 20px * $i; }
+    // }
+    @for $i from 1 to 3 {
+        .item-#{$i} { width: 20px * $i; }
+    }
+    @each $icon in error, success, warn {
+        .#{$icon}-icon {
+          background-image: url('/images/#{$icon}.png');
+        }
+      }
+
+    $i: 6;
+    @while $i > 0 {
+        .item-#{$i} { width: 20px * $i; }
+        $i: $i - 2;
+    }
+}
+
+#arrow{
+    @include myborder(yellow,right);
 }
 
 
