--- a/sass/common.scss
+++ b/sass/common.scss
@@ -5,3 +5,14 @@
     // background: #ccc;
     border:10px solid $col;
 }
+@mixin myborder($col:purple,$dir:left){
+    width:0px;
+    height:0px;
+    border: 20px solid transparent;
+    @if ($dir == left ){
+        border-right-color: $col;
+    }@else if($dir == right){
+        border-left-color: $col;
+    }
+    
+}
