--- a/mywebpack/src/css/index.css
+++ b/mywebpack/src/css/index.css
@@ -1,3 +1,9 @@
 h1{
     color: red;
 }
+.box{
+    background-image: url("../images/1.png");
+    width: 100px;
+    height: 100px;
+    background-size: contain;
+}
